tests/baselines/reference/primitiveTypeAsInterfaceNameGeneric.errors.txt
==== tests/cases/compiler/primitiveTypeAsInterfaceNameGeneric.ts (2 errors) ====
    interface number<T> {}
              ~~~~~~
!!! primitiveTypeAsInterfaceNameGeneric.ts(1,11): error TS1058: Interface name cannot be 'number'.
              ~~~~~~
!!! primitiveTypeAsInterfaceNameGeneric.ts(1,11): error TS2000: Duplicate identifier 'number'.